@@ -1,3 +1,7 @@
+05 Apr 2007 coudercd
+ * removed obsolete option LIBOBJ.
+ * added missing initialisation of lib_type in the scanzone structure.
+
 21 Mar 2007 coudercd
  * replaced blank lines by one dot lines in manual pages, notified by
    Magnus Holmgren.
